unpackaged/main/default/objects/Pay_Increase__c/Pay_Increase__c.object-meta.xml
<CustomObject>
    <label>Pay Increase</label>
    <nameField>
        <label>Pay Increase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Increases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>