unpackaged/main/default/objects/Pay_Increase__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>