unpackaged/main/default/objects/Pay_Increase__c/fields/IsStarting_Salary__c.field-meta.xml
<CustomField>
    <fullName>IsStarting_Salary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if this is the starting salary for the employee</inlineHelpText>
    <label>Starting Salary</label>
    <type>Checkbox</type>
</CustomField>