unpackaged/main/default/objects/Pay_Increase__c/fields/New_Salary__c.field-meta.xml
<CustomField>
    <fullName>New_Salary__c</fullName>
    <formula>Current_Salary__c + Pay_Increase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>