unpackaged/main/default/objects/Pay_Increase__c/fields/Pay_Increase__c.field-meta.xml
<CustomField>
    <fullName>Pay_Increase__c</fullName>
    <label>Pay Increase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>