unpackaged/main/default/objects/Pay_Increase__c/validationRules/Salesforce_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_Admin</fullName>
    <active>false</active>
    <errorConditionFormula>$User.ProfileId = "00e4K000001dwXd"</errorConditionFormula>
    <errorMessage>You do not have the permissions to create a new pay increase</errorMessage>
</ValidationRule>