unpackaged/main/default/objects/Pay_Increase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_Record__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Current_Salary__c</columns>
    <columns>Pay_Increase__c</columns>
    <columns>New_Salary__c</columns>
    <columns>Comments__c</columns>
    <columns>IsStarting_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>